<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="kamcord">Kamcord</string>
    <string name="kamcordShare">Share</string>
    <string name="kamcordWatch">Watch</string>
    <string name="kamcordProfile">Profile</string>
    <string name="kamcordClose">Close</string>
    <string name="kamcordWatchVideo">Watch Video</string>
    <string name="kamcordWriteATitle">Write a title...</string>
    <string name="kamcordFacebook">Facebook</string>
    <string name="kamcordYouTube">YouTube</string>
    <string name="kamcordTwitter">Twitter</string>
    <string name="kamcordEmail">Email</string>
    <string name="kamcordLINE">LINE</string>
    <string name="kamcordShareReplay">Share Replay</string>
    <string name="kamcordRetry">Retry</string>
    <string name="kamcordPoweredByKamcord">Powered by Kamcord</string>
    <string name="kamcordUploadFinished">Upload Finished!</string>
    <string name="kamcordUploadFailed">Upload Failed</string>
    <string name="kamcordUploading">Uploading...</string>
    <string name="kamcordWorking">Working...</string>
    <string name="kamcordLINENotFound">LINE App Not Found</string>
    <string name="kamcordInstallLINE">You must install the LINE App before you can share to LINE.</string>
    <string name="kamcordNoInternet">No Internet Connection</string>
    <string name="kamcordOk">Ok</string>
    <string name="kamcordYes">Yes</string>
    <string name="kamcordNo">No</string>
    <string name="kamcordNoVideoAvailable">No Video Available</string>
    <string name="kamcordUsername">Username</string>
    <string name="kamcordPassword">Password</string>
    <string name="kamcordImReady">"I'm Ready!"</string>
    <string name="kamcordCreateProfile">Create Profile</string>
    <string name="kamcordPrivacyPolicy">Privacy Policy</string>
    <string name="kamcordTermsOfService">Terms of Service</string>
    <string name="kamcordAgreementBlurb">By clicking Create Profile you are indicating that you have read and agree to the Privacy Policy and Terms of Service.</string>
    <string name="kamcordUsernameMinCharacters">Username must be at least 5 characters</string>
    <string name="kamcordUsernameMaxCharacters">Username must be less than 16 characters</string>
    <string name="kamcordUsernameIllegalCharacters">Illegal characters in username</string>
    <string name="kamcordUsernameInUse">Username is already in use</string>
    <string name="kamcordUsernameEnter">Please enter a valid username</string>
    <string name="kamcordPasswordMinCharacters">Password must be at least 6 characters</string>
    <string name="kamcordPasswordMaxCharacters">Password must be less than 31 characters</string>
    <string name="kamcordPasswordEnter">You must enter a password</string>
    <string name="kamcordEmailInvalid">Invalid email</string>
    <string name="kamcordEmailInUse">Email is already in use</string>
    <string name="kamcordEmailEnter">You must enter an email</string>
    <string name="kamcordEmailMaxCharacters">Email must be less than 65 characters</string>
    <string name="kamcordProfileErrorTitle">Profile Creation Error</string>
    <string name="kamcordProfileErrorMessage">Profile creation did not work, please try again later</string>
    <string name="kamcordEmailCorrect">Is your email correct?</string>
    <string name="kamcordEmailEntered">The email you entered is %@</string>
    <string name="kamcordUnclaimedVideos">Unclaimed Videos</string>
    <string name="kamcordAnyUnclaimedVideos">Any unclaimed videos will be associated with your profile.</string>
    <string name="kamcordUsernameEmail">Username or Email</string>
    <string name="kamcordSignIn">Sign In</string>
    <string name="kamcordSignOut">Sign Out</string>
    <string name="kamcordForgotYourPassword">Forgot your password?</string>
    <string name="kamcordNoAccountFound">No Account Found</string>
    <string name="kamcordSignInError">Sign In Error</string>
    <string name="kamcordSorryMatchingAccounts">Sorry, we could not find any matching accounts.</string>
    <string name="kamcordEmailDoesNotExist">Email or username does not exist</string>
    <string name="kamcordInvalidPassword">Invalid password</string>
    <string name="kamcordEditProfile">Edit Profile</string>
    <string name="kamcordNoAccountLinked">No account linked</string>
    <string name="kamcordConfirmFacebookSignOut">Confirm Facebook Sign Out</string>
    <string name="kamcordConfirmTwitterSignOut">Confirm Twitter Sign Out</string>
    <string name="kamcordConfirmYouTubeSignOut">Confirm YouTube Sign Out</string>
    <string name="kamcordConfirmKamcordSignOut">Confirm Kamcord Sign Out</string>
    <string name="kamcordAreYouSure">Are you sure you want to sign out?</string>
    <string name="kamcordEnterUsernameOrEmail">Enter the username or email address of your Kamcord profile.</string>
    <string name="kamcordResetPassword">Reset Password</string>
    <string name="kamcordEmailNotSent">Email Not Sent</string>
    <string name="kamcordAnotherPasswordReset">Another password reset request is already pending.</string>
    <string name="kamcordEmailSent">Email Sent</string>
    <string name="kamcordWeveEmailedYou">"We've emailed you a link to reset your password!"</string>
    <string name="kamcordChangePassword">Change Password</string>
    <string name="kamcordChangeEmail">Change Email</string>
    <string name="kamcordCurrentPassword">Current password</string>
    <string name="kamcordNewPassword">New password</string>
    <string name="kamcordNewPasswordAgain">New password (again)</string>
    <string name="kamcordNewEmail">New email</string>
    <string name="kamcordNewEmailAgain">New email (again)</string>
    <string name="kamcordNewPasswordsDoNotMatch">New passwords do not match</string>
    <string name="kamcordNewEmailsDoNotMatch">New emails do not match</string>
    <string name="kamcordSuccessfullyChangedEmail">Your preferred email was successfully changed.</string>
    <string name="kamcordSuccessfullyChangedPassword">Your password was successfully changed.</string>
    <string name="kamcordSuccess">Success!</string>
    <string name="kamcordOn">On</string>
    <string name="kamcordOff">Off</string>
    <string name="kamcordEnable">Enable</string>
    <string name="kamcordDisable">Disable</string>
    <string name="kamcordVoiceOverlay">Voice Overlay</string>
    <string name="kamcordEnableVoiceOverlayQuestion">Enable Voice Overlay?</string>
    <string name="kamcordVoiceOverlayDisabledDevice">Voice overlay is disabled on this device.</string>
    <string name="kamcordVoiceOverlayDisabled">Voice Overlay Disabled</string>
    <string name="kamcordEnableVoiceOverlay">Enable Voice Overlay</string>
    <string name="kamcordYouCanEnableVoiceOverlay">You can enable voice overlay by going to Profile => Settings or pressing Enable below.</string>
    <string name="kamcordVoiceOverlayEnabledFuture">Voice Overlay will be enabled for future videos.</string>
    <string name="kamcordVoiceOverlayEnabledExclamation">Voice Overlay Enabled!</string>
    <string name="kamcordNotNow">Not Now</string>
    <string name="dlg_msg_payment_success">The payment was successful</string>
    <string name="IDS_SAPPS_POP_AN_ERROR_OCCURRED_WHILE_RESETTING_SAMSUNG_IN_APP_PURCHASE">An error occurred while resetting Samsung In-App Purchase</string>
    <string name="IDS_SAPPS_POP_AN_INVALID_VALUE_HAS_BEEN_PROVIDED_FOR_SAMSUNG_IN_APP_PURCHASE">An invalid value has been provided for Samsung In-App Purchase</string>
    <string name="IDS_SAPPS_POP_AN_UNEXPECTED_ERROR_HAS_OCCURRED_SAMSUNG_ACCOUNT_AUTHENTICATION_HAS_BEEN_CANCELLED">An unexpected error has occurred. Samsung account authentication has been cancelled.</string>
    <string name="IDS_SAPPS_POP_YOUR_PURCHASE_VIA_SAMSUNG_IN_APP_PURCHASE_IS_INVALID_A_FAKE_APPLICATION_HAS_BEEN_DETECTED_CHECK_THE_APP_MSG">Your purchase via Samsung In-App Purchase is invalid. A fake application has been detected. Check the app you are trying to purchase and try again.</string>
    <string name="IDS_SAPPS_POP_UNKNOWN_ERROR_OCCURRED">Unknown error occurred</string>
    <string name="IDS_SAPPS_POP_SAMSUNG_IN_APP_PURCHASE">Samsung In-App Purchase</string>
    <string name="IDS_SAPPS_POP_SAMSUNG_IN_APP_PURCHASE_NEEDS_TO_BE_UPDATED">Samsung In-App Purchase needs to be updated</string>
    <string name="IDS_SAPPS_POP_TO_PURCHASE_ITEMS_YOU_NEED_TO_INSTALL_SAMSUNG_IN_APP_PURCHASE_INSTALL_Q">To purchase items, you need to install Samsung In-App Purchase. Install?</string>
    <string name="IDS_SAPPS_POP_A_NEW_VERSION_OF_SAMSUNG_IN_APP_PURCHASE_IS_AVAILABLE_UPDATE_Q">A new version of Samsung In-App Purchase is available. Update?</string>
    <string name="IDS_SAPPS_BODY_WAITING_ING">Waiting...</string>
    <string name="IDS_SAPPS_POP_PRODUCT_DOES_NOT_EXIST_IN_THIS_STORE">Product does not exist in this store</string>
    <string name="IDS_SAPPS_POP_ALREADY_PURCHASED">Already purchased</string>
    <string name="IDS_SAPPS_POP_PAYMENT_CANCELLED">Payment cancelled</string>
    <string name="IDS_SAPPS_POP_NETWORK_UNAVAILABLE">Network not available</string>
    <string name="IDS_SAPPS_HEADER_ITEM_PURCHASED">Item purchased</string>
    <string name="app_name">CopNRobber</string>
</resources>
