<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:background="@android:color/transparent" android:layout_width="fill_parent" android:layout_height="fill_parent" android:fillViewport="true"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:padding="@dimen/kamcordProfileSettingsSpacing" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <LinearLayout android:orientation="vertical" android:id="@id/settings_items" android:background="#ffffffff" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/kamcordProfileSettingsSpacing">
            <LinearLayout android:id="@id/editProfileLayout" style="@style/KamcordProfileSettingsItemContainer">
                <TextView android:text="@string/kamcordEditProfile" style="@style/KamcordProfileSettingsItemText" />
                <ImageView android:layout_width="wrap_content" android:layout_height="@dimen/kamcordProfileSettingsNextIconHeight" android:layout_marginLeft="@dimen/kamcordProfileSettingsSpacing" android:src="@drawable/kamcord_player_next_icon" />
            </LinearLayout>
            <View android:id="@id/firstDivider" style="@style/KamcordProfileSettingsDivider" />
        </LinearLayout>
        <LinearLayout android:orientation="vertical" android:background="#ffffffff" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/kamcordProfileSettingsSpacing">
            <LinearLayout android:id="@id/voice_overlay_container" style="@style/KamcordProfileSettingsItemContainer">
                <ImageView android:src="@drawable/kamcord_mic" style="@style/KamcordProfileSettingsItemIcon" />
                <LinearLayout android:orientation="vertical" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0">
                    <TextView android:text="@string/kamcordVoiceOverlay" style="@style/KamcordProfileSettingsNetworkText" />
                    <TextView android:id="@id/voice_overlay_status_text" style="@style/KamcordProfileSettingsUsernameText" />
                </LinearLayout>
                <ToggleButton android:id="@id/voice_overlay_button" android:textOn="@string/kamcordEnable" android:textOff="@string/kamcordDisable" style="@style/KamcordButton.Small" />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout android:orientation="vertical" android:background="#ffffffff" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <LinearLayout android:id="@id/termsOfServiceLayout" style="@style/KamcordProfileSettingsItemContainer">
                <TextView android:text="@string/kamcordTermsOfService" style="@style/KamcordProfileSettingsItemText" />
                <ImageView android:layout_width="wrap_content" android:layout_height="@dimen/kamcordProfileSettingsNextIconHeight" android:layout_marginLeft="@dimen/kamcordProfileSettingsSpacing" android:src="@drawable/kamcord_player_next_icon" />
            </LinearLayout>
            <View style="@style/KamcordProfileSettingsDivider" />
            <LinearLayout android:id="@id/privacyPolicyLayout" style="@style/KamcordProfileSettingsItemContainer">
                <TextView android:text="@string/kamcordPrivacyPolicy" style="@style/KamcordProfileSettingsItemText" />
                <ImageView android:layout_width="wrap_content" android:layout_height="@dimen/kamcordProfileSettingsNextIconHeight" android:layout_marginLeft="@dimen/kamcordProfileSettingsSpacing" android:src="@drawable/kamcord_player_next_icon" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>