<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@android:color/transparent" android:padding="@dimen/kamcordForgotPasswordPadding" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textColor="@color/kamcordTextColor" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/kamcordForgotPasswordPadding" android:text="@string/kamcordEnterUsernameOrEmail" />
    <LinearLayout android:background="#ffffffff" android:paddingLeft="@dimen/kamcordChangeCredsPadding" android:paddingRight="@dimen/kamcordChangeCredsPadding" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/kamcordForgotPasswordPadding">
        <EditText android:textColor="#ff000000" android:id="@id/usernameOrEmail" android:background="@null" android:padding="@dimen/kamcordChangeCredsPadding" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/kamcordUsernameEmail" android:maxLines="1" android:singleLine="true" android:inputType="textNoSuggestions" android:imeOptions="actionDone" android:textCursorDrawable="@null" />
    </LinearLayout>
    <Button android:id="@id/resetPassword" android:text="@string/kamcordResetPassword" style="@style/KamcordButton" />
</LinearLayout>