<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_gravity="center_horizontal" android:orientation="vertical" android:id="@id/mainlayout" android:background="@android:color/transparent" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="horizontal" android:id="@id/thumbnailAndDescription" android:background="@drawable/kamcord_share_edit_background" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="@dimen/kamcordShareSpacing" android:layout_alignParentTop="true">
        <RelativeLayout android:layout_gravity="center_horizontal" android:padding="@dimen/kamcordShareRectStroke" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <ImageButton android:id="@id/thumbnailButton" android:background="@color/kamcordShareThumbBackground" android:layout_width="@dimen/kamcordShareThumbSize" android:layout_height="@dimen/kamcordShareThumbSize" android:scaleType="centerCrop" android:adjustViewBounds="true" android:layout_centerInParent="true" android:contentDescription="@string/kamcordWatchVideo" />
            <ImageView android:id="@id/thumbnailPlayOverlay" android:layout_width="@dimen/kamcordShareThumbPlayOverlaySize" android:layout_height="@dimen/kamcordShareThumbPlayOverlaySize" android:src="@drawable/kamcord_play_overlay" android:scaleType="centerCrop" android:adjustViewBounds="true" android:layout_centerInParent="true" android:contentDescription="@string/kamcordWatchVideo" />
            <ProgressBar android:layout_gravity="center" android:id="@id/videoProgressBar" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerInParent="true" style="@android:style/Widget.ProgressBar.Small" />
        </RelativeLayout>
        <View android:focusable="true" android:focusableInTouchMode="true" android:layout_width="0.0px" android:layout_height="0.0px" />
        <RelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent">
            <EditText android:textColor="@color/kamcordShareTitleEditTextColor" android:id="@id/description" android:background="@null" android:paddingRight="@dimen/kamcordShareSpacing" android:nextFocusLeft="@id/description" android:nextFocusUp="@id/description" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginLeft="@dimen/kamcordShareSpacing" android:hint="@string/kamcordWriteATitle" android:layout_above="@id/voiceOverlayStatus" android:layout_alignParentLeft="true" android:layout_alignParentTop="true" android:layout_alignParentRight="true" android:inputType="textCapSentences|textMultiLine" />
            <View android:id="@id/voiceOverlayDivider" android:background="@color/kamcordShareRectStroke" android:layout_width="fill_parent" android:layout_height="@dimen/kamcordShareRectStroke" android:layout_alignBottom="@id/description" />
            <TextView android:textColor="@color/kamcordShareTitleEditTextColor" android:gravity="center" android:id="@id/voiceOverlayStatus" android:padding="@dimen/kamcordShareSpacing" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/kamcordVoiceOverlay" android:layout_toLeftOf="@id/voiceOverlayToggle" android:layout_alignParentLeft="true" android:layout_alignParentBottom="true" />
            <ToggleButton android:textColor="@color/kamcordShareWidgetTextSelected" android:id="@id/voiceOverlayToggle" android:background="@drawable/kamcord_toggle_selector" android:layout_width="@dimen/kamcordShareToggleWidth" android:layout_height="wrap_content" android:layout_margin="@dimen/kamcordShareWidgetNudge" android:layout_alignTop="@id/voiceOverlayStatus" android:layout_alignParentRight="true" android:layout_alignParentBottom="true" />
        </RelativeLayout>
    </LinearLayout>
    <RelativeLayout android:layout_gravity="center_horizontal" android:background="@drawable/kamcord_share_grid_background" android:padding="@dimen/kamcordShareRectStroke" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/kamcordShareSpacing" android:layout_marginRight="@dimen/kamcordShareSpacing" android:layout_marginBottom="@dimen/kamcordShareSpacing" android:layout_below="@id/thumbnailAndDescription">
        <View android:id="@id/strut" android:layout_width="0.0dip" android:layout_height="0.0dip" android:layout_centerHorizontal="true" />
        <LinearLayout android:id="@id/share_0_0" android:background="@drawable/kamcord_rounded_top_left_selector" android:layout_marginRight="@dimen/kamcordShareWidgetSpacing" android:layout_marginBottom="@dimen/kamcordShareWidgetSpacing" android:layout_alignRight="@id/strut" android:layout_alignParentLeft="true" android:layout_alignParentTop="true" style="@style/KamcordShareWidgetContainer">
            <TextView android:id="@id/share_0_0_text" style="@style/KamcordShareWidgetText" />
        </LinearLayout>
        <LinearLayout android:id="@id/share_0_1" android:background="@drawable/kamcord_rounded_top_right_selector" android:layout_marginBottom="@dimen/kamcordShareWidgetSpacing" android:layout_alignLeft="@id/strut" android:layout_alignParentTop="true" android:layout_alignParentRight="true" style="@style/KamcordShareWidgetContainer">
            <TextView android:id="@id/share_0_1_text" style="@style/KamcordShareWidgetText" />
        </LinearLayout>
        <LinearLayout android:id="@id/share_1_0" android:background="@drawable/kamcord_rounded_bottom_left_selector" android:layout_marginRight="@dimen/kamcordShareWidgetSpacing" android:layout_below="@id/share_0_0" android:layout_alignRight="@id/strut" android:layout_alignParentLeft="true" style="@style/KamcordShareWidgetContainer">
            <TextView android:id="@id/share_1_0_text" style="@style/KamcordShareWidgetText" />
        </LinearLayout>
        <LinearLayout android:id="@id/share_1_1" android:background="@drawable/kamcord_rounded_bottom_right_selector" android:layout_toRightOf="@id/share_1_0" android:layout_below="@id/share_0_1" android:layout_alignLeft="@id/strut" android:layout_alignParentRight="true" style="@style/KamcordShareWidgetContainer">
            <TextView android:id="@id/share_1_1_text" style="@style/KamcordShareWidgetText" />
        </LinearLayout>
    </RelativeLayout>
    <TextView android:textSize="12.0dip" android:textColor="#ffa5aaae" android:gravity="center" android:padding="0.0dip" android:focusable="false" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/kamcordPoweredByKamcord" android:layout_above="@id/share" android:textAllCaps="true" />
    <Button android:id="@id/share" android:layout_marginTop="20.0dip" android:text="@string/kamcordShare" android:layout_alignParentBottom="true" style="@style/KamcordButton.Share" />
    <FrameLayout android:id="@id/touchInterceptor" android:layout_width="fill_parent" android:layout_height="fill_parent" />
</RelativeLayout>